# frdm-imx93-for-nxpcup

./: README  SBOM-FRDM-IMX93-for-NXP-CUP-1.0.spdx.json  west.yml
.github/workflows/: build-doc.yaml  build-test.yaml
boot/scripts/: emmc_boot  sd_boot  usb_boot
doc/: Doxyfile  booting_the_board.rst  conf.py  development_board.rst  index.rst  linux_setup.rst  mainpage.dox  the_project_structure.rst  windows_setup.rst  writing_your_application.rst
doc/_static/css/: custom.css
doc/hardware/: battery.rst  l298n.rst  mg996r.rst  pixy2.rst
doc/samples/: hbridge.rst  hello_world.rst  pixy2.rst  servo.rst
doc/tutorials/: commands.rst  configuring_your_application.rst  devicetree_basics.rst  imx93_pinctrl.rst  zephyr_and_devicetrees.rst  zephyr_device_drivers.rst  zephyr_dt_bindings.rst
docker/: Dockerfile  compose.yaml
samples/hbridge/: CMakeLists.txt  Kconfig  frdm_imx93.overlay  hbridge.c  hbridge.h  main.c  prj.conf
samples/hello_world/: CMakeLists.txt  main.c  prj.conf
samples/pixy2/: CMakeLists.txt  Kconfig  frdm_imx93.overlay  main.c  pixy2_command.c  pixy2_command.h  pixy2_protocol.c  pixy2_protocol.h  pixy2_transport.h  pixy2_transport_i2c.c  pixy2_transport_spi.c  prj.conf
samples/servo/: CMakeLists.txt  frdm_imx93.overlay  main.c  prj.conf  servo.c  servo.h
scripts/: docker_setup.sh  setup.ps1  setup.sh  util.sh
src/: CMakeLists.txt  Kconfig  frdm_imx93.overlay  main.c  prj.conf
